Refine GitHub Actions workflow for JSON update: clarify cron comments and standardize commit message format

--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -2,9 +2,9 @@ name: Update JSON twice daily
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # 09:00 KST (UTC+9)
+    - cron: "0 0 * * *"   # 09:00 KST
     - cron: "0 9 * * *"   # 18:00 KST
-  workflow_dispatch:      # 수동 실행도 가능
+  workflow_dispatch:
 
 jobs:
   update:
@@ -29,6 +29,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          KST_TIME=$(TZ=Asia/Seoul date +"%Y-%m-%d-%H-%M-%S")
           git add update.json
-          git commit -m "auto update: $(date)"
+          git commit -m "Update.json on ${KST_TIME}"
           git push
