--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -1,10 +1,11 @@
-name: Update JSON twice daily
+name: Update JSON three times daily
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # 09:00 KST
-    - cron: "0 9 * * *"   # 18:00 KST
-  workflow_dispatch:
+    - cron: "5 15 * * *"   # 00:05 KST (UTC+9)
+    - cron: "0 0 * * *"    # 09:00 KST
+    - cron: "0 9 * * *"    # 18:00 KST
+  workflow_dispatch:        # 수동 실행용 버튼
 
 jobs:
   update:
@@ -26,10 +27,12 @@ jobs:
           echo "{\"data\": \"${KST_TIME}\"}" > update.json
 
       - name: Commit and push changes
+        env:
+          TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "kimkee"
+          git config user.email "kimkee7@gmail.com"  # 반드시 Verified 상태여야 함
           KST_TIME=$(TZ=Asia/Seoul date +"%Y-%m-%d-%H-%M-%S")
           git add update.json
-          git commit -m "Update.json on ${KST_TIME}"
-          git push
+          git commit -m "Update.json on ${KST_TIME}" || echo "No changes to commit."
+          git push https://$TOKEN@github.com/kimkee/kimkee.git HEAD:main
