--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           git config user.name "kimkee"
           git config user.email "kimkee7@gmail.com"  # 반드시 Verified 상태여야 함
-          KST_TIME=$(TZ=Asia/Seoul date +"%Y-%m-%d-%H-%M-%S")
+          KST_TIME=$(TZ=Asia/Seoul date +"%Y-%m-%d %H:%M:%S")
           git add update.json
           git commit -m "Update.json on ${KST_TIME}" || echo "No changes to commit."
           git push https://$TOKEN@github.com/kimkee/kimkee.git HEAD:main
